--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "aurelia-bootstrapper": "^2.3.3",
-    "aurelia-animator-css": "^1.0.4"
+    "aurelia-animator-css": "^1.0.4",
+    "aurelia-bootstrapper": "^2.3.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
