--- a/package.json
+++ b/package.json
@@ -12,49 +12,49 @@
     "aurelia-bootstrapper": "^2.3.3"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.18.0",
-    "aurelia-cli": "^2.0.2",
-    "aurelia-testing": "^1.0.0",
-    "gulp": "^4.0.2",
-    "gulp-eslint": "^6.0.0",
-    "minimatch": "^3.0.4",
-    "promise-polyfill": "^8.2.0",
-    "@babel/plugin-proposal-decorators": "^7.12.12",
+    "@babel/core": "^7.13.14",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-decorators": "^7.12.12",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/core": "^7.12.10",
-    "@babel/register": "^7.12.10",
-    "regenerator-runtime": "^0.13.7",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/register": "^7.13.14",
+    "app-settings-loader": "^1.0.6",
+    "aurelia-cli": "^2.0.2",
+    "aurelia-loader-nodejs": "^1.1.0",
+    "aurelia-pal-nodejs": "^2.0.0",
+    "aurelia-testing": "^1.0.0",
+    "aurelia-webpack-plugin": "^4.0.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "babel-plugin-istanbul": "^6.0.0",
-    "html-webpack-plugin": "^4.5.1",
-    "copy-webpack-plugin": "^6.4.0",
-    "mini-css-extract-plugin": "^1.3.4",
-    "aurelia-webpack-plugin": "^4.0.0",
-    "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "clean-webpack-plugin": "^3.0.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2",
+    "copy-webpack-plugin": "^6.4.0",
+    "css-loader": "^5.2.0",
+    "duplicate-package-checker-webpack-plugin": "^3.0.0",
+    "eslint": "^7.23.0",
     "expose-loader": "^1.0.3",
-    "style-loader": "^2.0.0",
-    "url-loader": "^4.1.1",
-    "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
-    "app-settings-loader": "^1.0.6",
-    "json-loader": "^0.5.7",
+    "gulp": "^4.0.2",
+    "gulp-eslint": "^6.0.0",
     "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.1",
     "istanbul-instrumenter-loader": "^3.0.1",
-    "webpack-bundle-analyzer": "^4.3.0",
-    "tree-kill": "^1.2.2",
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
     "jest-transform-stub": "^2.0.0",
-    "aurelia-loader-nodejs": "^1.1.0",
-    "aurelia-pal-nodejs": "^2.0.0",
-    "babel-jest": "^26.6.3"
+    "json-loader": "^0.5.7",
+    "mini-css-extract-plugin": "^1.4.0",
+    "minimatch": "^3.0.4",
+    "promise-polyfill": "^8.2.0",
+    "regenerator-runtime": "^0.13.7",
+    "style-loader": "^2.0.0",
+    "tree-kill": "^1.2.2",
+    "url-loader": "^4.1.1",
+    "webpack": "^4.44.2",
+    "webpack-bundle-analyzer": "^4.3.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.2"
   },
   "browserslist": [
     "defaults"
