feridun's component repo cloned. text-field brought to date-picker.html

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "license": "MIT",
   "dependencies": {
     "aurelia-animator-css": "^1.0.4",
-    "aurelia-bootstrapper": "^2.3.3"
+    "aurelia-bootstrapper": "^2.3.3",
+    "moment": "^2.29.1"
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
